<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:id="@+id/capSong" android:text="@string/song_name"
              android:layout_width="wrap_content" />
    <EditText android:layout_height="wrap_content" android:id="@+id/txtOjName" android:text=""
              android:layout_width="fill_parent"
              android:layout_below="@id/capSong"
              android:hint="@string/song_name"
              android:singleLine="true"
              android:inputType="textCapWords"/>

    <TextView android:layout_height="wrap_content" android:id="@+id/capArtist" android:text="@string/artist_name"
              android:layout_width="wrap_content"
              android:layout_below="@id/txtOjName" />
    <EditText android:layout_height="wrap_content" android:id="@+id/txtArtist" android:text=""
              android:layout_width="fill_parent"
              android:layout_below="@id/capArtist"
              android:hint="@string/artist_name"
              android:singleLine="true"
              android:inputType="textCapWords"/>

    <CheckBox
            android:id="@+id/chkGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_public"
            android:layout_below="@id/txtArtist"
            android:checked="true"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:background="@android:drawable/bottom_bar"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/chkGallery">

        <Button
                android:id="@+id/okButton"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/ok"
                android:layout_weight="1.0" />

        <Button
                android:id="@+id/cancelButton"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/cancel"
                android:layout_weight="1.0" />

    </LinearLayout>
</RelativeLayout>
